修改选择难度界面 修改level6生成关卡数据算法 添加游戏介绍

--- a/01_coinFlip/res.qrc
+++ b/01_coinFlip/res.qrc
@@ -22,5 +22,6 @@
         <file>res/TapButtonSound.wav</file>
         <file>res/Title.png</file>
         <file>res/LevelIcon.png</file>
+        <file>res/level.png</file>
     </qresource>
 </RCC>
